# lukelog

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
lukelog/: __init__.py  log.py
tests/: test_log.py
